--- a/custom-plugins/template.html
+++ b/custom-plugins/template.html
@@ -1,21 +1,19 @@
 <html>
-<head>
+  <head>
     <meta http-equiv=Content-Type content="text/html;charset=utf-8">
     <link rel="stylesheet" href="theme/css/wechat.css" type="text/css" charset="utf-8">
-</head>
-<body>
-  %s
-  <!--
-  <div class="copyleft">
-    <p>文档信息</p>
-    <ul>
+  </head>
+  <body>
+    %s
+    <p> 点击「阅读原文」，能看到更多链接。 </p>
+    <!--
+      <div class="copyleft">
+      <p>文档信息</p>
+      <ul>
       <li> 版权声明：自由转载-非商用-非衍生-保持署名（创意共享3.0许可证）</li>
       <li> 作者： Jeffrey4l </li>
       <li> 发表日期： 2017年12月19日 </li>
-  </div>
-  -->
-<div>
-
-</div>
-</body>
+      </div>
+    -->
+  </body>
 </html>
