--- a/custom-plugins/template.html
+++ b/custom-plugins/template.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     %s
-    <p> 点击「阅读原文」，能看到更多链接。 </p>
+    <p> 点击「阅读原文」，能看到更好的排版。 </p>
     <!--
       <div class="copyleft">
       <p>文档信息</p>
