--- a/custom-plugins/template.html
+++ b/custom-plugins/template.html
@@ -2,6 +2,7 @@
   <head>
     <meta http-equiv=Content-Type content="text/html;charset=utf-8">
     <link rel="stylesheet" href="theme/css/wechat.css" type="text/css" charset="utf-8"  data-premailer="ignore"/>
+    <link rel="stylesheet" href="theme/css/pygment.css" type="text/css" charset="utf-8" data-premailer="ignore"/>
   </head>
   <body>
     %s
